test/tasty/neg/src-2/TestThisTypes.check
TestThisTypes_fail.scala:12: error: type mismatch;
 found   : b.Base
 required: a.Base
    aBase = b.doTest.get // error
                     ^
1 error
